---
version: 0.07
date:    
changes:
- Add manifest_skip and readme_from to Makefile.PL
---
version: 0.06
date:    Thu Sep  9 17:57:44 PDT 2010
changes:
- use Mouse v0.65
- Change admin to is_admin in M::I::Mousse
- Fix doc
---
version: 0.05
date:    Tue Aug 31 19:14:54 PDT 2010
changes:
- t/foo.t failed without Module::Install
---
version: 0.04
date:    Tue Aug 31 08:50:47 PDT 2010
changes:
- Fun doc change per ilmari++
---
version: 0.03
date:    Sun Aug 29 18:41:20 PDT 2010
changes:
- Fixed another bootstrapping issue in Makefile.PL.
  Made dist with 'use_mousse_dev'.
---
version: 0.02
date:    Sun Aug 29 18:41:20 PDT 2010
changes:
- Fixed bootstrapping issue in Makefile.PL. Makefile.PL failed to find
  Mousse::Maker.
---
version: 0.01
date:    Thu Aug 26 06:35:25 PDT 2010
changes:
- Initial version.