@@ -20,3 +20,9 @@
 ^notes
 ^todo
 ^ToDo$
+## avoid OS X finder files
+^\.DS_Store$
+## skip komodo project files
+\.kpf$
+## ignore emacs and vim backup files
+~$
