@@ -6,9 +6,17 @@ name 'Mousse';
 
 perl_version '5.008003';
 
-use_mousse 'Mousse';
-# Don't distribute with this one!
-# use_mousse_dev 'Mousse';
+
+# NOTE Set this to 1 to build Mousse then set back to zero!
+my $build_new_mousse = 0;
+if ($build_new_mousse) {
+    warn "\n\n*** WARNING *** Makefile.PL set to build new Mousse!\n\n";
+    use_mousse_dev 'Mousse';
+}
+else {
+    use_mousse 'Mousse';
+}
+
 
 {
     local $SIG{__WARN__} = sub {1};
