@@ -1,4 +1,4 @@
-# This file was generated by Mousse::Maker 0.06 from Mouse 0.65.
+# This file was generated by Mousse::Maker 0.07 from Mouse 0.70.
 #
 # ANY CHANGES MADE HERE WILL BE LOST!
 use strict;
@@ -32,17 +32,15 @@ BEGIN {
 
 # Contents of Mouse::PurePerl
 package Mousse::PurePerl;
-
-require Mousse::Util;
-
+# The pure Perl backend for Mousse
 package Mousse::Util;
-
 use strict;
 use warnings;
-
-use warnings FATAL => 'redefine'; # to avoid to load Mousse::PurePerl
+use warnings FATAL => 'redefine'; # to avoid to load Mousse::PurePerl twice
 
 use B ();
+
+require Mousse::Util;
 
 
 # taken from Class/MOP.pm
@@ -808,7 +806,7 @@ package Mousse::Exporter;
 use strict;
 use warnings;
 
-use Carp qw(confess);
+use Carp ();
 
 my %SPEC;
 
@@ -926,7 +924,7 @@ sub build_import_methods{
 		my %default;
 		foreach my $keyword(@{$default_list}){
 			$default{$keyword} = $exports{$keyword}
-				|| confess(qq{The $exporting_package package does not export "$keyword"});
+				|| Carp::confess(qq{The $exporting_package package does not export "$keyword"});
 		}
 		$args{DEFAULT} = \%default;
 	}
@@ -948,7 +946,7 @@ sub do_import {
 	my($package, @args) = @_;
 
 	my $spec = $SPEC{$package}
-		|| confess("The package $package package does not use Mousse::Exporter");
+		|| Carp::confess("The package $package package does not use Mousse::Exporter");
 
 	my $into = _get_caller_package(ref($args[0]) ? shift @args : undef);
 
@@ -967,7 +965,7 @@ sub do_import {
 		}
 		elsif($arg =~ s/^://){
 			my $group = $spec->{groups}{$arg}
-				|| confess(qq{The $package package does not export the group "$arg"});
+				|| Carp::confess(qq{The $package package does not export the group "$arg"});
 			push @exports, @{$group};
 		}
 		else{
@@ -975,7 +973,8 @@ sub do_import {
 		}
 	}
 
-	$^H              |= $strict_bits;                                 # strict->import;
+	# strict->import;
+	$^H              |= $strict_bits;
 	# warnings->import('all', FATAL => 'recursion');
 	${^WARNING_BITS} |= $warnings::Bits{all};
 	${^WARNING_BITS} |= $warnings_extra_bits;
@@ -1012,7 +1011,7 @@ sub do_import {
 		foreach my $keyword(@exports){
 			push @export_table,
 				$keyword => ($spec->{EXPORTS}{$keyword}
-					|| confess(qq{The $package package does not export "$keyword"})
+					|| Carp::confess(qq{The $package package does not export "$keyword"})
 				);
 		}
 		Mousse::Util::install_subroutines($into, @export_table);
@@ -1028,7 +1027,7 @@ sub do_unimport {
 	my($package, $arg) = @_;
 
 	my $spec = $SPEC{$package}
-		|| confess("The package $package does not use Mousse::Exporter");
+		|| Carp::confess("The package $package does not use Mousse::Exporter");
 
 	my $from = _get_caller_package($arg);
 
@@ -1116,21 +1115,18 @@ BEGIN{
 		},
 	);
 
+	our $VERSION = '0.70';
+
+	my $xs = !(defined(&is_valid_class_name) || $ENV{MOUSE_PUREPERL} || $ENV{PERL_ONLY});
 
 	# Because Mousse::Util is loaded first in all the Mousse sub-modules,
-	# XS loader is placed here, not in Mousse.pm.
-
-	our $VERSION = '0.65';
-
-	my $xs = !(exists $INC{'Mousse/PurePerl.pm'} || $ENV{MOUSE_PUREPERL} || $ENV{PERL_ONLY});
-
+	# XSLoader must be placed here, not in Mousse.pm.
 	if($xs){
 		# XXX: XSLoader tries to get the object path from caller's file name
 		#      $hack_mouse_file fools its mechanism
-
 		(my $hack_mouse_file = __FILE__) =~ s/.Util//; # .../Mousse/Util.pm -> .../Mousse.pm
 		$xs = eval sprintf("#line %d %s\n", __LINE__, $hack_mouse_file) . q{
-			local $^W = 0; # work around 'redefine' warning to &install_subroutines
+			local $^W = 0; # workaround 'redefine' warning to &install_subroutines
 			require XSLoader;
 			XSLoader::load('Mousse', $VERSION);
 			Mousse::Util->import({ into => 'Mousse::Meta::Method::Constructor::XS' }, ':meta');
@@ -1224,7 +1220,7 @@ BEGIN {
 		{
 			package # hide from PAUSE
 				Class::C3;
-			our %MRO; # work around 'once' warnings
+			our %MRO; # avoid 'once' warnings
 		}
 
 		# MRO::Compat::__get_linear_isa has no prototype, so
@@ -2030,8 +2026,7 @@ sub _parse_type {
 
 sub find_type_constraint {
 	my($spec) = @_;
-	return $spec if Mousse::Util::is_a_type_constraint($spec);
-	return undef if !defined $spec;
+	return $spec if Mousse::Util::is_a_type_constraint($spec) or not defined $spec;
 
 	$spec =~ s/\s+//g;
 	return $TYPE{$spec};
@@ -2049,8 +2044,7 @@ sub register_type_constraint {
 
 sub find_or_parse_type_constraint {
 	my($spec) = @_;
-	return $spec if Mousse::Util::is_a_type_constraint($spec);
-	return undef if !defined $spec;
+	return $spec if Mousse::Util::is_a_type_constraint($spec) or not defined $spec;
 
 	$spec =~ s/\s+//g;
 	return $TYPE{$spec} || do{
@@ -2083,7 +2077,7 @@ use 5.006_002;
 
 use Mousse::Exporter; # enables strict and warnings
 
-our $VERSION = '0.65';
+our $VERSION = '0.70';
 
 use Carp         qw(confess);
 use Scalar::Util qw(blessed);
@@ -2856,22 +2850,25 @@ sub make_mutable {
 sub is_immutable;
 sub is_mutable   { !$_[0]->is_immutable }
 
-sub _install_modifier_pp{
+sub _install_modifier {
 	my( $self, $type, $name, $code ) = @_;
 	my $into = $self->name;
 
 	my $original = $into->can($name)
-		or $self->throw_error("The method '$name' is not found in the inheritance hierarchy for class $into");
+		or $self->throw_error("The method '$name' was not found in the inheritance hierarchy for $into");
 
 	my $modifier_table = $self->{modifiers}{$name};
 
 	if(!$modifier_table){
-		my(@before, @after, @around, $cache, $modified);
-
-		$cache = $original;
-
-		$modified = sub {
-			for my $c (@before) { $c->(@_) }
+		my(@before, @after, @around);
+		my $cache = $original;
+		my $modified = sub {
+			if(@before) {
+				for my $c (@before) { $c->(@_) }
+			}
+			unless(@after) {
+				return $cache->(@_);
+			}
 
 			if(wantarray){ # list context
 				my @rval = $cache->(@_);
@@ -2920,55 +2917,6 @@ sub _install_modifier_pp{
 	}
 
 	return;
-}
-
-sub _install_modifier {
-	my ( $self, $type, $name, $code ) = @_;
-
-	# load Data::Util first
-	my $no_cmm_fast = do{
-		local $@;
-		eval q{ use Data::Util 0.55 () };
-		$@;
-	};
-
-	my $impl;
-	if($no_cmm_fast){
-		$impl = \&_install_modifier_pp;
-	}
-	else{
-		$impl = sub {
-			my ( $self, $type, $name, $code ) = @_;
-			my $into = $self->name;
-
-			my $method = Mousse::Util::get_code_ref( $into, $name );
-
-			if ( !$method || !Data::Util::subroutine_modifier($method) ) {
-				unless ($method) {
-					$method = $into->can($name)
-						or Carp::confess("The method '$name' is not found in the inheritance hierarchy for class $into");
-				}
-				$method = Data::Util::modify_subroutine( $method,
-					$type => [$code] );
-
-				$self->add_method($name => $method);
-			}
-			else {
-				Data::Util::subroutine_modifier( $method, $type => $code );
-				$self->add_method($name => Mousse::Util::get_code_ref($into, $name));
-			}
-
-			return;
-		};
-	}
-
-	# replace this method itself :)
-	{
-		no warnings 'redefine';
-		*_install_modifier = $impl;
-	}
-
-	$self->$impl( $type, $name, $code );
 }
 
 sub add_before_method_modifier {
@@ -3491,12 +3439,13 @@ sub _generate_delegation{
 		($method_to_call, @curried_args) = @{$method_to_call};
 	}
 
-	my $reader = $attr->get_read_method_ref();
+	# If it has a reader, we must use it to make method modifiers work
+	my $reader = $attr->get_read_method() || $attr->get_read_method_ref();
 
 	my $can_be_optimized = $attr->{_method_delegation_can_be_optimized};
 
 	if(!defined $can_be_optimized){
-		my $tc     = $attr->type_constraint;
+		my $tc = $attr->type_constraint;
 
 		$attr->{_method_delegation_can_be_optimized} =
 			(defined($tc) && $tc->is_a_type_of('Object'))
@@ -4363,7 +4312,7 @@ sub DEMOLISHALL;
 package Mousse::Role;
 use Mousse::Exporter; # enables strict and warnings
 
-our $VERSION = '0.65';
+our $VERSION = '0.70';
 
 use Carp         qw(confess);
 use Scalar::Util qw(blessed);
@@ -4646,7 +4595,7 @@ sub _make_new_class {
 
 package Mousse;
 
-our $VERSION = '0.06';
+our $VERSION = '0.07';
 
 Mousse::Exporter->setup_import_methods(also => 'Mousse::TOP');
 
